mds: reset heartbeat in EMetaBlob replay

Fixes: https://tracker.ceph.com/issues/46042
Signed-off-by: Yanhu Cao <jrcaoyanhu@jd.com>
(cherry picked from commit 07031a0de9654e029fc5063899c2d9394c7f4668)